[package]
name = "tauriapp"
version = "0.0.0"
description = "Tauri Desktop application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = { version = "1.2", features = [] }

# The actual Tauri dependency, along with `custom-protocol` to serve the pages.
[dependencies]
tauri = { version = "1.2", features = ["custom-protocol"] }


#[dependencies]
#serde_json = "1.0"
#serde = { version = "1.0", features = ["derive"] }
#tauri = { version = "1.2", features = ["shell-sidecar"] }

# For sidecar (bundled nodejs runtime) add this to allowList:{} in tauri.conf.json
#  "shell": {
#        "sidecar": true,
#        "scope": [
#          {
#            "name": "binaries/app",
#            "sidecar": true
#          }
#        ]
#      }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
